<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ttth.quanlysach.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/title"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:background="@color/green_dark"
        style="?android:attr/textAppearanceLarge"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/tvAddAuthor"
        android:text="@string/add_author"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/state_bg"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:layout_height="70dp" />
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/tvName"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/name_author"
        android:gravity="center"
        android:background="@drawable/state_bg"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:layout_height="70dp" />
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/tvManageBook"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/manage_book"
        android:gravity="center"
        android:background="@drawable/state_bg"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:layout_height="70dp" />
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/btnCancel"
        android:text="@string/cancel"
        android:layout_gravity="right"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content" />
</LinearLayout>
