<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:text="@string/view"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_height="50dp">
        <TextView
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:text="@string/seri_author"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"
            style="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <EditText
            android:layout_width="0dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/edtUpdateSeri"
            android:background="@color/white"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:layout_height="match_parent">
            <requestFocus/>
        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_height="50dp">
        <TextView
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:text="Tên tác giả :"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"
            style="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <EditText
            android:layout_width="0dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/edtUpdateName"
            android:background="@color/white"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:layout_height="match_parent">
            <requestFocus/>
        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_height="40dp">
        <TextView
            android:layout_width="0dp"
            android:id="@+id/tvUpdateClear"
            android:text="@string/clear"
            android:background="@color/gray"
            android:textColor="@color/black"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            style="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="0dp"
            android:id="@+id/tvUpdate"
            android:background="@color/gray"
            android:layout_weight="2"
            android:gravity="center"
            android:text="Update"
            android:textColor="@color/black"
            style="?android:attr/textAppearanceMedium"
            android:layout_height="match_parent">
            <requestFocus/>
        </TextView>

    </LinearLayout>

</LinearLayout>